--- a/Miss Betterfly.html
+++ b/Miss Betterfly.html
@@ -348,17 +348,21 @@
         }
 
         function updateDateDisplay() {
-            const now = new Date();
-            const options = { 
-                weekday: 'long', 
-                year: 'numeric', 
-                month: 'long', 
-                day: 'numeric',
-                hour: '2-digit',
-                minute: '2-digit'
-            };
-            document.getElementById('dateDisplay').textContent = now.toLocaleDateString(undefined, options);
-        }
+    const customDate = new Date(2025, 2, 4, 0, 0); // 4 March 2025, 12:00 AM
+    const options = { 
+        weekday: 'long', 
+        year: 'numeric', 
+        month: 'long', 
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        hour12: true // Ensures 12-hour format with AM/PM
+    };
+    document.getElementById('dateDisplay').textContent = customDate.toLocaleDateString(undefined, options);
+}
+
+// Call the function to update the display
+
 
         // Initialize everything
         showNextQuote();
