--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
         <!-- Rest of the HTML remains the same -->
         <div class="main-container">
             <div class="card main-card">
-                <h1>🦋 Birthday Wishes for Miss Butterfly Behjat Batool 🦋</h1>
+                <h1>🦋 Birthday Wishes for Miss Butterfly 🦋</h1>
                 <div class="quote-container">
                     <div id="quote" class="quote"></div>
                 </div>
@@ -268,10 +268,10 @@
         <script>
         // Previous JavaScript code remains exactly the same
         const quotes = [
-    "Like a radiant butterfly, you spread joy and warmth wherever you go. Wishing you a birthday filled with happiness, love, and endless blessings. Happy Birthday, Behjat! 🦋✨",
+    "Like a radiant butterfly, you spread joy and warmth wherever you go. Wishing you a birthday filled with happiness, love, and endless blessings. Happy Birthday, Miss Butterfy! 🦋✨",
             "May your birthday sparkle with moments of love, laughter, and cherished memories! ✨ Wishing you a day as special as you are!",
             "Just as a butterfly dances through life with grace, may you soar to new heights this year! 💫",
-            "Today we celebrate you, Behjat—our precious butterfly, who makes the world more colorful and bright! 🌈",
+            "Today we celebrate you, Miss Butterfly—our precious butterfly, who makes the world more colorful and bright! 🌈",
             "May your birthday bloom with endless possibilities and wonderful surprises at every turn! 🌸",
             "Wishing you a year filled with magical moments, beautiful transformations, and boundless joy! 🦋",
             "Like the gentle flutter of butterfly wings, may your dreams take flight and reach the stars! 🎈",
