--- a/Miss Betterfly.html
+++ b/Miss Betterfly.html
@@ -267,10 +267,10 @@
         <script>
         // Previous JavaScript code remains exactly the same
         const quotes = [
-    "Like a radiant butterfly, you spread joy and warmth wherever you go. Wishing you a birthday filled with happiness, love, and endless blessings. Happy Birthday, Miss Butterfy! 🦋✨",
+    "Like a radiant butterfly, you spread joy and warmth wherever you go. Wishing you a birthday filled with happiness, love, and endless blessings. Happy Birthday, Miss Butterfly! 🦋✨",
             "May your birthday sparkle with moments of love, laughter, and cherished memories! ✨ Wishing you a day as special as you are!",
             "Just as a butterfly dances through life with grace, may you soar to new heights this year! 💫",
-            "Today we celebrate you, Miss Butterfly—our precious butterfly, who makes the world more colorful and bright! 🌈",
+            "Today we celebrate you, Behjat—our precious butterfly, who makes the world more colorful and bright! 🌈",
             "May your birthday bloom with endless possibilities and wonderful surprises at every turn! 🌸",
             "Wishing you a year filled with magical moments, beautiful transformations, and boundless joy! 🦋",
             "Like the gentle flutter of butterfly wings, may your dreams take flight and reach the stars! 🎈",
